--- a/css/new_payroll_form.css
+++ b/css/new_payroll_form.css
@@ -116,6 +116,30 @@ label {
     margin-left: 12px;
 }
 
+/* --- UC 4 --- */
+/*.department {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+
+}
+.departmentone > label{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 10px;
+
+
+}
+
+.labelss > label {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+
+}
+*/
+
 /* --- UC 5 --- */
 select {
     padding: 12px;
@@ -126,6 +150,8 @@ select {
     letter-spacing: 0px;
     color: #42515f;
     background-color: transparent;
+    margin-bottom: 10px;
+
 }
 
 /* --- UC 6 --- */
@@ -133,7 +159,7 @@ select {
     display: flex;
     margin-bottom: 10px;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .button {
     font-size: 20px;
@@ -165,6 +191,15 @@ error-output {
     font-size: 12px;
     font-style: roboto;
     color: red;
+}
+@media only screen and (max-width: 1300px) {
+    .cancelButton {
+        margin-left: 0px;
+    }
+    .form {
+        width: 85%;
+        padding: 44px 20px;
+    }
 }
 
 @media only screen and (max-width: 960px) {
@@ -215,10 +250,8 @@ error-output {
     .submitButton {
         margin-bottom: 20px;
     }
-
-
 }
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 240px) {
     h1 {
         font-size: 40px;
         text-align: center;
